2008-08-02  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c: (analyze_line):
	un-marked the new string as translatable, since strings are
	frozen.

2008-08-02  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/forth.lang: reverted last commit,
	need to branch for 2-22 first. Bureaucracy!

2008-08-02  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/forth.lang: changed "Compiler opt"
	style name to "Compiler Directive", bug #518437.

2008-08-02  Yevgen Muntyan  <muntyan@tamu.edu>

	Bug 114337 – long lines kill GtkSourceView.
	Worked it around by disabling syntax highlighting if analyzing
	single line took more than 2 seconds.

	* gtksourceview/gtksourcecontextengine.c:
	(GtkSourceContextEnginePrivate::disabled): new field,
	(gtk_source_context_engine_update_highlight): check that field,
	(analyze_line): check elapsed time on every iteration and abort
	in two seconds,
	(update_syntax): check whether analyze_line() has disabled
	highlighting,
	(disable_highlighting): new function to turn highlighting off.

=== gtksourceview 2.2.2 ===

2008-06-23  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	Release 2.2.2

2008-06-20  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/latex.lang: added bunch of commands.
        Bug #361209, patch by Marciano Siniscalchi.

2008-06-18  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview-2.0.pc.in: moved libxml-2.0 from Requires to
        Requires.private, added minimal versions for gtk+-2.0 and libxml-2.0.
        Bugs 501515, 508591.

2008-06-18  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/php.lang: added parentheses and
        comma to the operators list. Bug #497376, Étienne Bersac.

2008-06-18  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/ruby.lang: added bunch of builtins.
        Bug #337561, patch by gbauman.

2008-06-18  Yevgen Muntyan  <muntyan@tamu.edu>
